--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 * {
 	box-sizing: border-box;
+	border: 1px solid magenta;
 }
 
 html {
@@ -9,19 +10,47 @@ html {
 body{
 	font-size: 1.6rem;
 	font-family: monospace;
+	overflow: auto;
 }
 
 h1 {
-	padding-top: 30px;
+	padding-top: 20px;
 }
 
 p {
 	padding: 20px;
 }
 
-img, p {
+img, p, iframe{
 	width: 100%;
 	margin: 0 auto;
+}
+
+iframe {
+	height: 400px;
+}
+
+/***********/
+/*responsive embed container courtesy of https://whiteleydesigns.com/responsive-youtube-embed*/
+/*.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0; 
+    overflow: hidden;
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}*/
+/***********/
+
+.hide {
+	display: none; 
 }
 
 #content {
